# ntnda-qt-viewer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/napari_ntnd/: __init__.py  __main__.py  _widget.py
src/ntnda_qt_viewer/: __main__.py  _p4p.py  _widget.py
